--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
                 </div>
             </div>
             <div class="stats-numbers">
-                <p id="numbers">2 / 3</p>
+                <p id="numbers">0 / 0</p>
                 
             </div>
         </div>
     
 
     <form action="">
-        <input type="text" placeholder="Write your task">
-        <button type="submit">+</button>
+        <input type="text" placeholder="Write your task" id="taskInput">
+        <button type="submit" id="newTask">+</button>
     </form>
-    <ul class="task-list">
+    <ul id="task-list">
 
     </ul>
     </div>
 <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
 </body>
 </html>
+
+
